[public]adjust of view idea#view

--- a/app/views/public/favorites/_favorite.html.erb
+++ b/app/views/public/favorites/_favorite.html.erb
@@ -1,13 +1,13 @@
 <% if idea.favorited_by?(current_user) %>
-  <p>
-    <%= link_to idea_favorites_path(idea.id), method: :delete, remote: true do %>
+  <text>
+    <%= link_to idea_favorites_path(idea.id), method: :delete, class:'text-danger', remote: true do %>
       ♥<%= idea.favorites.count %>
     <% end %>
-  </p>
+  </text>
 <% else %>
-  <p>
+  <text>
     <%= link_to idea_favorites_path(idea.id), method: :post, remote: true do %>
       ♡<%= idea.favorites.count %>
     <% end %>
-  </p>
+  </text>
 <% end %>
