--- a/app/views/public/ideas/edit.html.erb
+++ b/app/views/public/ideas/edit.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-4'>
-      <h2>New Idea</h2>
+      <h2>Edit</h2>
     </div>
     <div class='col-md-8'></div>
   </div>
