--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -330,11 +330,30 @@ footer {
 
 .profile_tab {
   padding-top: 40px;
-  
+
   span {
     padding-right: 20px;
   }
 }
 
-//contact用
+//idea#show
 
+.name_tag_list {
+  margin-right: 40px;
+}
+
+.eachcomment {
+  padding: 5px 0px;
+  margin-bottom: 40px;
+  border-top: solid 1px;
+  border-bottom: solid 1px;
+}
+
+.comment_tab {
+  margin-right: 20px;
+}
+
+.main_comment {
+  margin-left: 70px;
+  padding-top: 10px;
+}
