--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -222,9 +222,42 @@ footer {
 
 }
 
-//idea#index
+//idea#search
+
+.sidebar_rank {
+  margin-top: 30px;
+}
+
+.sidebar_rank_each {
+  margin-top: 10px;
+}
+
+.whole_card {
+  display: inline-block;
+}
+
+.sidebar_rank_design{
+    margin:2em 0;
+    position: relative;
+    padding: 0.5em 1.5em;
+    border-top: solid 2px black;
+    border-bottom: solid 2px black;
+}
+.sidebar_rank_design:before, .sidebar_rank_design:after{
+    content: '';
+    position: absolute;
+    top: -10px;
+    width: 2px;
+    height: -webkit-calc(100% + 20px);
+    height: calc(100% + 20px);
+    background-color: black;
+}
+.sidebar_rank_design:before {left: 10px;}
+.sidebar_rank_design:after {right: 10px;}
+
 
 .card {
+  display: inline-block;
   width: 400px;
   height: 600px;
   margin-right: 100px;
@@ -256,6 +289,10 @@ footer {
 
 .card_info_user {
   display:inline-block;
+}
+
+.card_info_user_date {
+  margin-left: 100px;
 }
 
 .card_user_box {
