[public]adjust chat

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class='row font top-text-height'>
     <p class='mx-auto top-button'>
-      <strong><%= link_to 'start', ideas_path, class:'btn top-button' %></strong>
+      <strong><%= link_to 'start', search_path, class:'btn top-button' %></strong>
     </p>
   </div>
 </div>
