--- a/app/views/public/users/_sidebar.html.erb
+++ b/app/views/public/users/_sidebar.html.erb
@@ -23,6 +23,14 @@
   <div class='user-info-content'>
     <%= link_to 'フォロワー一覧', user_followers_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
   </div>
+  
+  <% if user != current_user %>
+    <div class='user-info-abst'>チャット</div>
+    <div class='user-info-content'>
+      <%= link_to 'チャット', chat_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
+    </div>
+  <% end %>
+  
   <% if user == current_user %>
     <div class='user-info-abst'>お気に入り</div>
     <div class='user-info-content'>
@@ -32,11 +40,6 @@
     <div class='user-info-abst'>コメント</div>
     <div class='user-info-content'>
       <%= link_to '過去のコメント', idea_comments_path(user), class:'text-dark', :style => 'text-decoration:none;' %>
-    </div>
-
-    <div class='user-info-abst'>チャット</div>
-    <div class='user-info-content'>
-      <%= link_to 'チャット', chat_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
     </div>
 
     <div class='user-info-abst'>ログアウト</div>
