finish unsubscribe-function

--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,4 +1,5 @@
 <div class='container'>
+  <%= flash[:error] %>
   <div class='row'>
     <div class='col-md-4 offset-md-2'>
       <h2>Sign up</h2>
