--- a/app/views/public/users/user_info.html.erb
+++ b/app/views/public/users/user_info.html.erb
@@ -1,5 +1,5 @@
 <div class='container'>
-
+  <%= render 'layouts/flash' %>
   <div class='row'>
     <%= render 'public/users/username', user: @user %>
   </div>
