--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -3,7 +3,7 @@
     <%= render 'public/users/username', user: @user %>
   </div>
   <div class='row'>
-    <h3 class='col-md-3 offset-md-3'>お気に入り一覧</h3>
+    <h3 class='col-md-3 offset-md-3'>コメント一覧</h3>
   </div>
   <div class='row'>
     
@@ -20,7 +20,7 @@
           <tr>
             <th>icon</th>
             <th>title</th>
-            <th>content</th>
+            <th>comment</th>
           </tr>
         </thead>
         <tbody>
