--- a/app/views/public/ideas/edit.html.erb
+++ b/app/views/public/ideas/edit.html.erb
@@ -10,6 +10,7 @@
   <div class='row'>
     <div class='mx-auto newidea'>
       <%= form_with model:@idea, url: idea_path(@idea), local:true do |f| %>
+        <%= render 'layouts/error_messages', model: f.object %>
         <div class='form-group'>
           <label for='inputTitle'>Title</label><br>
           <%= f.text_field :title, autofocus: true, size: '60', id:'inputTitle' %>
