--- a/app/views/public/ideas/new.html.erb
+++ b/app/views/public/ideas/new.html.erb
@@ -9,6 +9,7 @@
   <div class='row'>
     <div class='mx-auto newidea'>
       <%= form_with model:@idea, url: ideas_path, local:true do |f| %>
+        <%= render 'layouts/error_messages', model: f.object %>
         <div class='form-group'>
           <label for='inputTitle'>Title</label><br>
           <%= f.text_field :title, autofocus: true, size: '60', id:'inputTitle' %>
