--- a/app/views/public/users/user_info.html.erb
+++ b/app/views/public/users/user_info.html.erb
@@ -18,7 +18,7 @@
           <div class='card card_design'>
             <%= link_to idea_path(idea), class:'text-dark', :style => 'text-decoration:none;' do %>
               <div class='card_icon center'>
-                <%= attachment_image_tag idea, :icon, width:'500', fallback:'no_image.png' %>
+                <%= attachment_image_tag idea, :icon, width:'400', fallback:'no_image.png' %>
               </div>
               <div class='card_textbox'>
                 <div class='card_text_title'>
@@ -32,6 +32,7 @@
               <div class='card_user_box'>
                 <div class='card_info_user'>作成者:</div>
                 <div class='card_info_user'><%= link_to idea.user.name, user_path(idea.user_id), class:'text-dark', :style => 'text-decoration:none;' %></div>
+                <div class='card_info_user card_info_user_date'><%= idea.created_at.strftime('%Y/%m/%d') %></div>
               </div>
               <div class='card_info_box'>
                 <div class='card_info_content fas fa-heart'><%= idea.favorites.count %></div>
