--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class='col-md-3 offset-md-2 footer-box'>
       <div class='text-light h3 footer-contact center'>
-        <%= link_to 'Contact us', new_contact_path, class:'text-white', :style => 'text-decoration:none;' %>
+        <%= link_to 'Contact us', contacts_path, class:'text-white', :style => 'text-decoration:none;' %>
       </div>
     </div>
     <div class='col-md-2 offset-md-1 d-flex align-items-end'>
