[public]home_about

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -144,6 +144,26 @@ footer {
 
 }
 
+//home_about
+
+.slide-pic-content {
+  height: 800px;
+  width: 100%;
+}
+
+.home_about_title {
+  margin: 150px 0px 80px;
+}
+
+.home_about_block {
+  margin-bottom: 40px;
+}
+
+.home_about_sentense {
+  text-align: center;
+  padding: 5px;
+}
+
 // 登録者ページItem#new
 .inputframe {
     border: none;
