--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,7 +1,41 @@
-<div class='container'>
-  <div class='row'>
-    <h2>
-      What is BICS?
-    </h2>
+<div class='slide-pic'>
+  <div class='slide-pic-child'><%= image_tag 'home_pic1.jpg', class:'slide-pic-content' %></div>
+  <div class='slide-pic-child'><%= image_tag 'home_pic2.jpg', class:'slide-pic-content' %></div>
+  <div class='slide-pic-child'><%= image_tag 'home_pic3.jpg', class:'slide-pic-content' %></div>
+  <div class='slide-pic-child'><%= image_tag 'home_pic4.jpg', class:'slide-pic-content' %></div>
+  <div class='slide-pic-child'><%= image_tag 'home_pic5.jpg', class:'slide-pic-content' %></div>
+  <div class='slide-pic-child'><%= image_tag 'home_pic6.jpg', class:'slide-pic-content' %></div>
+</div>
+
+<div class='home_about_title'>
+  <div class='center'>
+    <h2>アイデアを生み出したあなたへ...</h2>
   </div>
 </div>
+<div class='home_about_block'>
+  <div class='center'>
+    <h5 class='home_about_sentense'>~BICS (Bisiness Idea and Change Society)~</h5>
+  </div>
+  <div>
+    <h5 class='home_about_sentense'>あなたが生み出したアイデアは一見奇抜であり得ないものかもしれません</h5>
+  </div>
+  <div>
+    <h5 class='home_about_sentense'>しかし，そのアイデアが世界を変えるとしたら...</h5>
+  </div>
+  <div>
+    <h5 class='home_about_sentense'>一歩踏み出してあなたのアイデアをシェアしてみませんか</h5>
+  </div>
+</div>
+
+<div class='home_about_block'>
+  <div class='center'>
+    <h5 class='home_about_sentense'>きっとその一歩が世界を変えるヒントになります</h5>
+  </div>
+  <div>
+    <h5 class='home_about_sentense'>このサイトはその一歩を踏み出すためのサイトです</h5>
+  </div>
+  <div>
+    <h5 class='home_about_sentense'>踏み出したユーザーと共にあなたのアイデアで世界を変えましょう！</h5>
+  </div>
+</div>
+
