--- a/app/views/public/ideas/search.html.erb
+++ b/app/views/public/ideas/search.html.erb
@@ -1,6 +1,15 @@
 <div class='container-fluid'>
 
   <div class='row'>
+    <%= form_with url: finder_path, method: :get, local:true do |f| %>
+      <%= f.select :range, options_for_select([['ユーザー', 'User'], ['専門分野', 'Speciality'], ['アイデア', 'Idea'], ['タグ', 'Tag']]) %>
+      <%= f.select :reference, options_for_select([['完全一致', 'perfect_match'], ['部分一致', 'partial_match']]) %>
+      <%= f.text_field :word %>
+      <%= f.submit '検索' %>
+    <% end %>
+  </div>
+
+  <div class='row'>
     <div class='col-md-2 offset-md-1'>
       <div class='sidebar_rank_design'>
         <div>
@@ -63,7 +72,7 @@
       <p><%= paginate @ideas %></p>
     </div>
   </div>
-  
+
 
 <script>
 $('.idea-review').empty();
