[public]adjust top

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,9 @@
-<div class='container-fluid top-view'>
-  <div class='row font top-text-height'>
-    <p class='mx-auto top-text'><strong>BICS</strong></p>
+<div class='top-view'>
+  <div class=' top-text-height'>
+    <p class='center top-text'><strong>BICS</strong></p>
   </div>
-  <div class='row font top-text-height'>
-    <p class='mx-auto top-button'>
+  <div class='center font top-text-height'>
+    <p class='top-button'>
       <strong><%= link_to 'start', search_path, class:'btn top-button' %></strong>
     </p>
   </div>
