--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,9 @@ body {
 //toppage
 .top-view {
   background-image: image-url('top2.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   height: 1000px;
   opacity: 0.6;
@@ -62,6 +65,7 @@ body {
 
 .top-button {
   font-size: 100px;
+  width: 300px;
   background: #696969;
   color: #000000;
   border-radius: 1000px;
