[public]adjust user-info review-star

--- a/app/views/public/users/user_info.html.erb
+++ b/app/views/public/users/user_info.html.erb
@@ -53,9 +53,13 @@
 $('.idea-review').empty();
   $('.idea-review').raty({
     readOnly: true,
+    starOn: "<%= asset_path('star-on.ong') %>",
+    starOff: "<%= asset_path('star-off.png') %>",
+    starHalf: "<%= asset_path('star-half.png') %>",
     score: function(){
       return $(this).attr('data-score');
     },
     path: '/assets/'
   });
 </script>
+
