[public]modify text(star-on.ong=>star-on.png)

--- a/app/views/public/users/user_info.html.erb
+++ b/app/views/public/users/user_info.html.erb
@@ -53,7 +53,7 @@
 $('.idea-review').empty();
   $('.idea-review').raty({
     readOnly: true,
-    starOn: "<%= asset_path('star-on.ong') %>",
+    starOn: "<%= asset_path('star-on.png') %>",
     starOff: "<%= asset_path('star-off.png') %>",
     starHalf: "<%= asset_path('star-half.png') %>",
     score: function(){
