[public]change of view(mentor-check)

--- a/app/views/public/users/profile.html.erb
+++ b/app/views/public/users/profile.html.erb
@@ -34,9 +34,9 @@
         <div class='center profile_title'>ポジション</div>
         <div class='center'>
           <% if @user.mentor_check == true %>
-            <span class='text-success'>一般</span>
+            <span class='text-success'>メンター</span>
           <% else %>
-            <span class='text-dark'>メンター</span>
+            <span class='text-dark'>一般ユーザー</span>
           <% end %>
         </div>
       </div>
