--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -54,9 +54,9 @@
           <td><label>Position</label></td>
           <td>
             <% if @user.mentor_check == true %>
-              <span class='text-success'>Mentor</span>
+              <span class='text-success'>メンター</span>
             <% else %>
-              <span class='text-secondary'>User</span>
+              <span class='text-secondary'>一般ユーザー</span>
             <% end %>
           </td>
         </tr>
