[public]additonal validation(idea#new, only pdf)

--- a/app/views/public/ideas/new.html.erb
+++ b/app/views/public/ideas/new.html.erb
@@ -23,7 +23,7 @@
           <%= f.attachment_field :icon %>
         </div>
         <div class='form-group'>
-          <label>Presentation_data</label><br>
+          <label>Presentation_data (<text style='color:red;'>pdfのみ追加できます</text>)</label><br>
           <%= f.attachment_field :presentation %>
         </div>
         <div class='form-group'>
