--- a/app/views/public/users/_sidebar.html.erb
+++ b/app/views/public/users/_sidebar.html.erb
@@ -32,6 +32,15 @@
   <% end %>
 
   <% if user == current_user %>
+  
+    <div class='user-info-abst'>通知</div>
+    <div class='user-info-content'>
+      <% if unchecked_notifications.any? %>
+        <i class='fa fa-circle' style='color:red;'></i>
+      <% end %>
+        <%= link_to '通知一覧', notifications_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
+    </div>
+    
     <div class='user-info-abst'>お気に入り</div>
     <div class='user-info-content'>
       <%= link_to 'お気に入り一覧', favorites_index_path(user.id), class:'text-dark', :style => 'text-decoration:none;' %>
