--- a/app/views/public/notifications/_notification.html.erb
+++ b/app/views/public/notifications/_notification.html.erb
@@ -1,13 +1,9 @@
 <% visitor = notification.visitor %>
 <% idea = notification.idea %>
 
-<div class="user-view clearfix ">
-  <%= link_to user_path(notification.visitor) do %>
+<div>
+  <%= link_to profile_user_path(notification.visitor) do %>
     <%= attachment_image_tag visitor, :profile_image, :fill,100,100, format: "jpeg", fallback: "no_image.png", size: "50x50", class:"profile-img-circle" %>
   <% end %>
-  <%= notification.notification_form(notification) %><span class="moderate-font"><%= " (#{time_ago_in_words(notification.created_at)} 前)" %></span>
-  <br>
-  <% if !@comment.nil? %>
-    <p class="moderate-font text-center" style="color: #C0C0C0;"><%= @comment %></p>
-  <% end %>
+  <%= notification.notification_form(notification) %><span><%= " (#{time_ago_in_words(notification.created_at)} 前)" %></span>
 </div>
