--- a/app/views/public/notifications/index.html.erb
+++ b/app/views/public/notifications/index.html.erb
@@ -8,7 +8,7 @@
         <% end %>
           <hr>
       <% if @notifications.exists? %>
-          <div class="users-index">
+          <div>
               <%= render @notifications %>
           </div>
       <% else %>
