[public]modification top

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,10 +1,11 @@
 <div class='top-view'>
   <div class=' top-text-height'>
-    <p class='center top-text'><strong>BICS</strong></p>
+    <p class='center top-text'><strong>あなたのアイデアが</strong></p>
+    <p class='center top-text'><strong>世界を変える</strong></p>
   </div>
   <div class='center font top-text-height'>
     <p class='top-button'>
-      <strong><%= link_to 'start', search_path, class:'btn top-button' %></strong>
+      <%= link_to 'start', search_path, class:'text-light', style:'text-decoration:none;' %>
     </p>
   </div>
 </div>
