--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,33 +42,30 @@ body {
 
 //toppage
 .top-view {
-  background-image: image-url('top2.jpg');
+  background-image: image-url('top3.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   height: 1000px;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 
 .top-text {
-  font-size: 200px;
-  color: #808080;
-  letter-spacing: 100px;
+  font-size: 80px;
+  color: #f0f8ff;
+  letter-spacing: 50px;
   text-shadow: 10px 10px 10px #696969;
 }
 
 .top-text-height {
-  padding-top: 150px;
+  padding-top: 250px;
 }
 
 .top-button {
-  font-size: 100px;
-  width: 300px;
-  background: #696969;
-  color: #000000;
-  border-radius: 1000px;
+  font-size: 70px;
+  color: #ffffff;
   opacity: 0.9
 }
 
