[public]modify css(idea-card)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -301,7 +301,7 @@ footer {
 }
 
 .card_textbox {
-  height: 170px;
+  height: 180px;
   padding: 10px 30px;
   overflow: hidden;
 }
@@ -329,7 +329,7 @@ footer {
   padding: 10px 30px;
 }
 .card_info_box {
-  padding: 10px 30px;
+  padding: 30px;
 }
 
 .card_info_content {
@@ -339,9 +339,6 @@ footer {
 
 
 //ユーザーのボタン一覧
-.user-info-box {
-
-}
 
 .user-info-abst {
   font-size: 23px;
