change home_about word

--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -14,7 +14,7 @@
 </div>
 <div class='home_about_block'>
   <div class='center'>
-    <h5 class='home_about_sentense'>~BICS (Bisiness Idea and Change Society)~</h5>
+    <h5 class='home_about_sentense'>~BICS (Business Idea and Change Society)~</h5>
   </div>
   <div>
     <h5 class='home_about_sentense'>あなたが生み出したアイデアは一見奇抜であり得ないものかもしれません</h5>
